--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.6",
+    "axios": "^1.3.2",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
     "phosphor-react": "^1.4.1",
