--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "@tanstack/react-query": "^4.24.6",
     "axios": "^1.3.2",
-    "leaflet": "^1.9.3",
-    "leaflet-routing-machine": "^3.2.12",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
