--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "axios": "^1.3.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
