--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "1.0.0-beta.6",
     "@react-google-maps/api": "^2.18.1",
     "@tanstack/react-query": "^4.24.6",
     "axios": "^1.3.2",
